# PAT

./: CMakeLists.txt
Algorithm/: AnotherOutput.cpp  B_1008.cpp  B_1011.cpp  B_1012.cpp  CountNumber.cpp  MoveRight.cpp  PrimePairs.cpp  RankGrade.cpp  ReverseDialog.cpp
DataStructure/: p17_1.cpp  p17_2.cpp  p17_3.cpp  p17_4.cpp  p17_5.cpp  p17_6.cpp  p17_7.cpp  p17_8.cpp
